[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Button/hoverButton.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Button/normalButton.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Button/pressedButton.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/world.tres" type="TileSet" id=5]
[ext_resource path="res://Assets/defualt.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=7]
[ext_resource path="res://Assets/homespun.ttf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_bottom = 13.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 12
border_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StreamTexture" id=14]
flags = 1
load_path = "res://.import/blue-guy2.png-7bcf7d3240e4abac5eedd2ff6f085437.stex"

[sub_resource type="Animation" id=6]
resource_name = "Attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Crouch"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "CrouchWalk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Dive"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Idle"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Jump"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -260.0
margin_top = 38.0
margin_right = 260.0
margin_bottom = 101.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 8
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "Multiplayer Platformer"
align = 1

[node name="Foreground" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
z_index = -1
tile_set = ExtResource( 5 )
cell_size = Vector2( 8, 8 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1, 536870917, 0, -65536, 536870917, 0, -65535, 536870917, 0, -65534, 536870917, 0, -65533, 536870917, 0, -65532, 536870917, 0, -65531, 536870917, 0, -65530, 536870917, 0, -65529, 536870917, 0, -65528, 536870917, 0, -65527, 536870917, 0, -65526, 536870917, 0, -65525, 536870917, 0, -65524, 536870917, 0, -65523, 536870917, 0, -65522, 536870917, 0, -65521, 536870917, 0, -65520, 536870917, 0, -65519, 536870917, 0, -65518, 536870917, 0, -65517, 536870917, 0, -65516, 536870917, 0, -65515, 536870917, 0, -65514, 536870917, 0, -65513, 536870917, 0, -65512, 536870917, 0, -65511, 536870917, 0, -65510, 536870917, 0, -65509, 536870917, 0, -65508, 536870917, 0, -65507, 536870917, 0, -65506, 536870917, 0, -65505, 536870917, 0, -65504, 536870917, 0, 65535, 536870917, 0, 0, 536870919, 0, 1, 536870919, 0, 2, 536870919, 0, 3, 536870919, 0, 28, 536870918, 0, 32, 536870917, 0, 131071, 536870917, 0, 65536, 536870919, 0, 65537, 536870919, 0, 65538, 536870919, 0, 65541, 536870918, 0, 65542, 536870918, 0, 65543, 536870918, 0, 65562, 536870918, 0, 65563, 536870918, 0, 65564, 536870918, 0, 65568, 536870917, 0, 196607, 536870917, 0, 131072, 536870919, 0, 131073, 536870919, 0, 131077, 536870918, 0, 131078, 536870918, 0, 131099, 536870918, 0, 131100, 536870918, 0, 131104, 536870917, 0, 262143, 536870917, 0, 196608, 536870919, 0, 196609, 3, 0, 196613, 3, 0, 196640, 536870917, 0, 327679, 536870917, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262149, 3, 0, 262176, 536870917, 0, 393215, 536870917, 0, 327681, 3, 0, 327685, 5, 0, 327712, 536870917, 0, 458751, 536870917, 0, 393217, 3, 0, 393221, 5, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393248, 536870917, 0, 524287, 536870917, 0, 458753, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458777, 536870915, 0, 458781, 3, 0, 458784, 536870917, 0, 589823, 536870917, 0, 524289, 5, 0, 524293, 3, 0, 524313, 536870915, 0, 524317, 536870917, 0, 524320, 536870917, 0, 655359, 536870917, 0, 589825, 5, 0, 589853, 536870917, 0, 589856, 536870917, 0, 720895, 536870917, 0, 655360, 0, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 0, 0, 655367, 1, 0, 655381, 536870913, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 0, 0, 655391, 0, 0, 655392, 536870917, 0, 786431, 536870917, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 9, 0, 720904, 536870912, 0, 720905, 536870912, 0, 720906, 0, 0, 720907, 0, 0, 720908, 11, 0, 720909, 11, 0, 720910, 11, 0, 720911, 11, 0, 720912, 11, 0, 720913, 11, 0, 720914, 11, 0, 720915, 11, 0, 720916, 0, 0, 720917, 536870921, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 536870917, 0, 851967, 536870917, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 11, 0, 786446, 11, 0, 786447, 11, 0, 786448, 11, 0, 786449, 11, 0, 786450, 11, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 536870917, 0, 917503, 536870917, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 11, 0, 851984, 11, 0, 851985, 11, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 536870917, 0, 983039, 536870917, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 917536, 536870917, 0, 1048575, 536870917, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983070, 536870920, 0, 983071, 536870920, 0, 983072, 536870917, 0, 1114111, 536870917, 0, 1048576, 536870914, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 536870914, 0, 1048580, 536870914, 0, 1048581, 536870914, 0, 1048582, 536870914, 0, 1048583, 536870914, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 536870920, 0, 1048599, 536870920, 0, 1048600, 536870920, 0, 1048601, 536870920, 0, 1048602, 536870920, 0, 1048603, 536870920, 0, 1048604, 536870920, 0, 1048605, 536870920, 0, 1048606, 536870920, 0, 1048607, 536870920, 0, 1048608, 536870917, 0, 1179647, 536870917, 0, 1114112, 536870920, 0, 1114113, 536870920, 0, 1114114, 536870920, 0, 1114115, 536870920, 0, 1114116, 536870920, 0, 1114117, 536870920, 0, 1114118, 536870920, 0, 1114119, 536870920, 0, 1114120, 536870920, 0, 1114121, 536870920, 0, 1114122, 536870920, 0, 1114123, 536870920, 0, 1114124, 536870920, 0, 1114125, 536870920, 0, 1114126, 536870920, 0, 1114127, 536870920, 0, 1114128, 536870920, 0, 1114129, 536870920, 0, 1114130, 536870920, 0, 1114131, 536870920, 0, 1114132, 536870920, 0, 1114133, 536870920, 0, 1114134, 536870920, 0, 1114135, 536870920, 0, 1114136, 536870920, 0, 1114137, 536870920, 0, 1114138, 536870920, 0, 1114139, 536870920, 0, 1114140, 536870920, 0, 1114141, 536870920, 0, 1114142, 536870920, 0, 1114143, 536870920, 0, 1114144, 536870917, 0, 1245183, 536870917, 0, 1179648, 536870920, 0, 1179649, 536870920, 0, 1179650, 536870920, 0, 1179651, 536870920, 0, 1179652, 536870920, 0, 1179653, 536870920, 0, 1179654, 536870920, 0, 1179655, 536870920, 0, 1179656, 536870920, 0, 1179657, 536870920, 0, 1179658, 536870920, 0, 1179659, 536870920, 0, 1179660, 536870920, 0, 1179661, 536870920, 0, 1179662, 536870920, 0, 1179663, 536870920, 0, 1179664, 536870920, 0, 1179665, 536870920, 0, 1179666, 536870920, 0, 1179667, 536870920, 0, 1179668, 536870920, 0, 1179669, 536870920, 0, 1179670, 536870920, 0, 1179671, 536870920, 0, 1179672, 536870920, 0, 1179673, 536870920, 0, 1179674, 536870920, 0, 1179675, 536870920, 0, 1179676, 536870920, 0, 1179677, 536870920, 0, 1179678, 536870920, 0, 1179679, 536870920, 0, 1179680, 536870917, 0, 1310719, 536870917, 0, 1245184, 536870917, 0, 1245185, 536870917, 0, 1245186, 536870917, 0, 1245187, 536870917, 0, 1245188, 536870917, 0, 1245189, 536870917, 0, 1245190, 536870917, 0, 1245191, 536870917, 0, 1245192, 536870917, 0, 1245193, 536870917, 0, 1245194, 536870917, 0, 1245195, 536870917, 0, 1245196, 536870917, 0, 1245197, 536870917, 0, 1245198, 536870917, 0, 1245199, 536870917, 0, 1245200, 536870917, 0, 1245201, 536870917, 0, 1245202, 536870917, 0, 1245203, 536870917, 0, 1245204, 536870917, 0, 1245205, 536870917, 0, 1245206, 536870917, 0, 1245207, 536870917, 0, 1245208, 536870917, 0, 1245209, 536870917, 0, 1245210, 536870917, 0, 1245211, 536870917, 0, 1245212, 536870917, 0, 1245213, 536870917, 0, 1245214, 536870917, 0, 1245215, 536870917, 0, 1245216, 536870917, 0 )

[node name="Background" type="TileMap" parent="."]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
scale = Vector2( 4, 4 )
z_index = -2
tile_set = ExtResource( 5 )
cell_size = Vector2( 8, 8 )
collision_layer = 8
collision_mask = 8
format = 1
tile_data = PoolIntArray( 0, 536870919, 0, 1, 536870919, 0, 2, 536870919, 0, 3, 536870919, 0, 28, 536870918, 0, 65536, 536870919, 0, 65537, 536870919, 0, 65538, 536870919, 0, 65541, 536870918, 0, 65542, 536870918, 0, 65543, 536870918, 0, 65562, 536870918, 0, 65563, 536870918, 0, 65564, 536870918, 0, 131072, 536870919, 0, 131073, 536870919, 0, 131077, 536870918, 0, 131078, 536870918, 0, 131099, 536870918, 0, 131100, 536870918, 0, 196608, 536870919, 0, 262148, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 458754, 3, 0, 458777, 536870915, 0, 458778, 536870915, 0, 458779, 536870915, 0, 458780, 536870915, 0, 458781, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524313, 536870915, 0, 524314, 536870915, 0, 524315, 536870915, 0, 524316, 536870915, 0, 524317, 536870915, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589849, 536870915, 0, 589850, 536870915, 0, 589851, 536870915, 0, 589852, 536870915, 0, 589853, 536870915, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655381, 536870913, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 0, 0, 655391, 0, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 536870914, 0, 720903, 536870914, 0, 720904, 536870914, 0, 720905, 536870914, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 536870914, 0, 786438, 536870914, 0, 786439, 536870914, 0, 786440, 536870914, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 851968, 2, 0, 851969, 536870914, 0, 851970, 536870914, 0, 851971, 536870914, 0, 851972, 536870914, 0, 851973, 536870914, 0, 851974, 536870914, 0, 851975, 536870914, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 917504, 2, 0, 917505, 536870914, 0, 917506, 536870914, 0, 917507, 536870914, 0, 917508, 536870914, 0, 917509, 536870914, 0, 917510, 536870914, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 983040, 2, 0, 983041, 536870914, 0, 983042, 536870914, 0, 983043, 536870914, 0, 983044, 536870914, 0, 983045, 536870914, 0, 983046, 536870914, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983070, 536870920, 0, 983071, 536870920, 0, 1048576, 536870914, 0, 1048577, 536870914, 0, 1048578, 536870914, 0, 1048579, 536870914, 0, 1048580, 536870914, 0, 1048581, 536870914, 0, 1048582, 536870914, 0, 1048583, 536870914, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 0, 1048596, 2, 0, 1048597, 2, 0, 1048598, 536870920, 0, 1048599, 536870920, 0, 1048600, 536870920, 0, 1048601, 536870920, 0, 1048602, 536870920, 0, 1048603, 536870920, 0, 1048604, 536870920, 0, 1048605, 536870920, 0, 1048606, 536870920, 0, 1048607, 536870920, 0, 1114112, 536870920, 0, 1114113, 536870920, 0, 1114114, 536870920, 0, 1114115, 536870920, 0, 1114116, 536870920, 0, 1114117, 536870920, 0, 1114118, 536870920, 0, 1114119, 536870920, 0, 1114120, 536870920, 0, 1114121, 536870920, 0, 1114122, 536870920, 0, 1114123, 536870920, 0, 1114124, 536870920, 0, 1114125, 536870920, 0, 1114126, 536870920, 0, 1114127, 536870920, 0, 1114128, 536870920, 0, 1114129, 536870920, 0, 1114130, 536870920, 0, 1114131, 536870920, 0, 1114132, 536870920, 0, 1114133, 536870920, 0, 1114134, 536870920, 0, 1114135, 536870920, 0, 1114136, 536870920, 0, 1114137, 536870920, 0, 1114138, 536870920, 0, 1114139, 536870920, 0, 1114140, 536870920, 0, 1114141, 536870920, 0, 1114142, 536870920, 0, 1114143, 536870920, 0, 1179648, 536870920, 0, 1179649, 536870920, 0, 1179650, 536870920, 0, 1179651, 536870920, 0, 1179652, 536870920, 0, 1179653, 536870920, 0, 1179654, 536870920, 0, 1179655, 536870920, 0, 1179656, 536870920, 0, 1179657, 536870920, 0, 1179658, 536870920, 0, 1179659, 536870920, 0, 1179660, 536870920, 0, 1179661, 536870920, 0, 1179662, 536870920, 0, 1179663, 536870920, 0, 1179664, 536870920, 0, 1179665, 536870920, 0, 1179666, 536870920, 0, 1179667, 536870920, 0, 1179668, 536870920, 0, 1179669, 536870920, 0, 1179670, 536870920, 0, 1179671, 536870920, 0, 1179672, 536870920, 0, 1179673, 536870920, 0, 1179674, 536870920, 0, 1179675, 536870920, 0, 1179676, 536870920, 0, 1179677, 536870920, 0, 1179678, 536870920, 0, 1179679, 536870920, 0 )

[node name="Players" type="Node2D" parent="."]

[node name="Rotate" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 304 )

[node name="Menu" type="Control" parent="Rotate"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Buttons" type="VBoxContainer" parent="Rotate/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 332.0
margin_top = 225.0
margin_right = 652.0
margin_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 160, 59 )
alignment = 1

[node name="Play" type="Button" parent="Rotate/Menu/Buttons"]
margin_right = 320.0
margin_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 47, 28 )
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Play"

[node name="Customization" type="Button" parent="Rotate/Menu/Buttons"]
margin_top = 61.0
margin_right = 320.0
margin_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 47, 28 )
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Customization"

[node name="Customization" type="Control" parent="Rotate"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Username" type="LineEdit" parent="Rotate/Customization"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = 59.0
margin_right = 219.0
margin_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
align = 1
max_length = 15
placeholder_text = "Username"

[node name="Right" type="Button" parent="Rotate/Customization"]
margin_left = 549.0
margin_top = 277.0
margin_right = 580.0
margin_bottom = 326.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
expand_icon = true

[node name="Left" type="Button" parent="Rotate/Customization"]
margin_left = 464.0
margin_top = 277.0
margin_right = 495.0
margin_bottom = 326.0
rect_scale = Vector2( -1, 1 )
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
icon = ExtResource( 7 )
expand_icon = true

[node name="Back" type="Button" parent="Rotate/Customization"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 125.0
margin_right = 160.0
margin_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 47, 28 )
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Back"

[node name="Player" type="Sprite" parent="Rotate/Customization"]
position = Vector2( 507, 299 )
scale = Vector2( 10, 10 )
texture = SubResource( 14 )
hframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rotate/Customization"]
autoplay = "Run"
anims/Attack = SubResource( 6 )
anims/Crouch = SubResource( 7 )
anims/CrouchWalk = SubResource( 8 )
anims/Dive = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/Jump = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/Run = SubResource( 13 )

[connection signal="pressed" from="Rotate/Menu/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Rotate/Menu/Buttons/Customization" to="." method="_on_Customization_pressed"]
[connection signal="pressed" from="Rotate/Customization/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Rotate/Customization/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Rotate/Customization/Back" to="." method="_on_Back_pressed"]
